# URLShortener

./: .gitignore  README.md  pyproject.toml
urlshortener/app/: main.py  mongoAPI.py
urlshortener/app/models/: urlcheck.py
urlshortener/app/routes/: shorten.py
